[package]
name = "moka-more"
version = "0.1.0"
edition = "2024"

[dependencies]
moka = { version = "0.12.10", features = ["sync", "future"] }
send-sync-static = "1.0.0"
sqlx = { version = "0.8.6", features = [] }

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dev-dependencies]
moka-more = { path = ".", features = ["mysql", "postgres", "sqlite"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

